force-app/main/default/objects/CSR__c/CSR__c.object-meta.xml
<CustomObject>
    <!--actionOverrides>
        <actionName>New</actionName>
        <content>csr_CreateCSROverride</content>
        <formFactor>Large</formFactor>
        <skipRecordTypeSelect>false</skipRecordTypeSelect>
        <type>LightningComponent</type>
    </actionOverrides-->
    <description>CSR Header</description>
    <label>CSR</label>
    <nameField>
        <displayFormat>CSR-{0000}</displayFormat>
        <label>CSR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>