force-app/main/default/objects/CSR__c/fields/csr_AccountId__c.field-meta.xml
<CustomField>
    <fullName>csr_AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CSRs</relationshipLabel>
    <relationshipName>CSRs</relationshipName>
    <type>Lookup</type>
</CustomField>