force-app/main/default/objects/CSR__c/fields/csr_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>csr_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSR</relationshipName>
    <type>Lookup</type>
</CustomField>