force-app/main/default/objects/CSR__c/fields/csr_Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>csr_Chassis_Number__c</fullName>
    <label>Chassis Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>