force-app/main/default/objects/CSR__c/fields/csr_Competitive_Type__c.field-meta.xml
<CustomField>
    <fullName>csr_Competitive_Type__c</fullName>
    <label>Competitive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <default>true</default>
                <label>Retail</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Wholesale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>