force-app/main/default/objects/CSR__c/fields/csr_Country__c.field-meta.xml
<CustomField>
    <fullName>csr_Country__c</fullName>
    <label>Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>