force-app/main/default/objects/CSR__c/fields/csr_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>csr_Currency_Code__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>CND</fullName>
            </value>
            <value>
                <fullName>PES</fullName>
            </value>
            <value>
                <fullName>PSO</fullName>
            </value>
            <value>
                <fullName>EUO</fullName>
            </value>
            <value>
                <fullName>COP</fullName>
            </value>
            <value>
                <fullName>RUB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>