force-app/main/default/objects/CSR__c/fields/csr_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>csr_Customer_Name__c</fullName>
    <description>This field is only used to capture the Customer Name from dealer on the Community Case forms</description>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>