force-app/main/default/objects/CSR__c/fields/csr_Dealer_Action__c.field-meta.xml
<CustomField>
    <fullName>csr_Dealer_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Action</label>
    <type>Checkbox</type>
</CustomField>