force-app/main/default/objects/CSR__c/fields/csr_Dealer_Discount__c.field-meta.xml
<CustomField>
    <fullName>csr_Dealer_Discount__c</fullName>
    <label>Dealer Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>