force-app/main/default/objects/CSR__c/fields/csr_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>csr_Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>