force-app/main/default/objects/CSR__c/fields/csr_Dealer_Type__c.field-meta.xml
<CustomField>
    <fullName>csr_Dealer_Type__c</fullName>
    <label>Dealer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <default>true</default>
                <label>Group</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Store</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>