force-app/main/default/objects/CSR__c/fields/csr_DealerCode__c.field-meta.xml
<CustomField>
    <fullName>csr_DealerCode__c</fullName>
    <label>Dealer Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>