force-app/main/default/objects/CSR__c/fields/csr_DealerDivision__c.field-meta.xml
<CustomField>
    <fullName>csr_DealerDivision__c</fullName>
    <label>Dealer Division</label>
    <length>1</length>
    <type>Text</type>
</CustomField>