force-app/main/default/objects/CSR__c/fields/csr_DealerGroup__c.field-meta.xml
<CustomField>
    <fullName>csr_DealerGroup__c</fullName>
    <label>Dealer Group</label>
    <length>6</length>
    <type>Text</type>
</CustomField>