force-app/main/default/objects/CSR__c/fields/csr_District__c.field-meta.xml
<CustomField>
    <fullName>csr_District__c</fullName>
    <label>District</label>
    <length>11</length>
    <type>Text</type>
</CustomField>