force-app/main/default/objects/CSR__c/fields/csr_DPM_Name__c.field-meta.xml
<CustomField>
    <fullName>csr_DPM_Name__c</fullName>
    <label>DPM Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>