force-app/main/default/objects/CSR__c/fields/csr_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>csr_Duration_Days__c</fullName>
    <label>Duration(Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>