force-app/main/default/objects/CSR__c/fields/csr_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>csr_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>