force-app/main/default/objects/CSR__c/fields/csr_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>csr_Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>