force-app/main/default/objects/CSR__c/fields/csr_Expected_Markup__c.field-meta.xml
<CustomField>
    <fullName>csr_Expected_Markup__c</fullName>
    <label>Expected Markup(%)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>