force-app/main/default/objects/CSR__c/fields/csr_Expedite__c.field-meta.xml
<CustomField>
    <fullName>csr_Expedite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expedite</label>
    <type>Checkbox</type>
</CustomField>