force-app/main/default/objects/CSR__c/fields/csr_Formula__c.field-meta.xml
<CustomField>
    <fullName>csr_Formula__c</fullName>
    <formula>IF(
ISBLANK(CSR_Number__c),
HYPERLINK(&quot;/lightning/r/CSR__c/&quot; &amp; Id &amp; &quot;/view&quot;, Name, &quot;_self&quot;),
HYPERLINK(&quot;/lightning/r/CSR__c/&quot; &amp; Id &amp; &quot;/view&quot;, CSR_Number__c, &quot;_self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR#</label>
    <type>Text</type>
</CustomField>