force-app/main/default/objects/CSR__c/fields/csr_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>csr_Insurance_Company__c</fullName>
    <label>Insurance Company</label>
    <length>28</length>
    <type>Text</type>
</CustomField>