force-app/main/default/objects/CSR__c/fields/csr_Internal_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>csr_Internal_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Checkbox</label>
    <type>Checkbox</type>
</CustomField>