force-app/main/default/objects/CSR__c/fields/csr_Phase__c.field-meta.xml
<CustomField>
    <fullName>csr_Phase__c</fullName>
    <label>Phase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>