force-app/main/default/objects/CSR__c/fields/csr_Region__c.field-meta.xml
<CustomField>
    <fullName>csr_Region__c</fullName>
    <label>Region</label>
    <length>4</length>
    <type>Text</type>
</CustomField>