force-app/main/default/objects/CSR__c/fields/csr_RSM_Name__c.field-meta.xml
<CustomField>
    <fullName>csr_RSM_Name__c</fullName>
    <label>RSM Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>