force-app/main/default/objects/CSR__c/fields/csr_Status__c.field-meta.xml
<CustomField>
    <fullName>csr_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Development</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Posted and Expired Date</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Posting in Process</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Pending PPD Response</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Posted</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Denied</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Submitted with Unvetted Competitor</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Dealer Action Required</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Routing</label>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>Holding</label>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>