force-app/main/default/objects/CSR__c/fields/csr_Type__c.field-meta.xml
<CustomField>
    <fullName>csr_Type__c</fullName>
    <label>CSR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Competitive</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Blind</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Wreck</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>