force-app/main/default/objects/CSR__c/fields/csr_Upload_Files__c.field-meta.xml
<CustomField>
    <fullName>csr_Upload_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Files</label>
    <type>Checkbox</type>
</CustomField>