force-app/main/default/objects/CSR__c/fields/csr_User__c.field-meta.xml
<CustomField>
    <fullName>csr_User__c</fullName>
    <label>CSR User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>