force-app/main/default/objects/CSR__c/fields/csr_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>csr_Write_Off__c</fullName>
    <label>Write Off</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>