force-app/main/default/objects/CSR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>csr_Formula__c</columns>
    <columns>csr_Phase__c</columns>
    <columns>csr_DealerDivision__c</columns>
    <columns>csr_DealerGroup__c</columns>
    <columns>csr_DealerCode__c</columns>
    <columns>csr_Dealer_Type__c</columns>
    <columns>csr_Type__c</columns>
    <columns>csr_Internal_Checkbox__c</columns>
    <columns>csr_Competitive_Type__c</columns>
    <columns>csr_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>csr_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CSRs</label>
</ListView>