force-app/main/default/objects/CSR__c/listViews/CSR_Rework.listView-meta.xml
<ListView>
    <fullName>CSR_Rework</fullName>
    <columns>csr_Formula__c</columns>
    <columns>csr_Phase__c</columns>
    <columns>csr_DealerDivision__c</columns>
    <columns>csr_DealerGroup__c</columns>
    <columns>csr_DealerCode__c</columns>
    <columns>csr_Dealer_Type__c</columns>
    <columns>csr_Type__c</columns>
    <columns>csr_Internal_Checkbox__c</columns>
    <columns>csr_Competitive_Type__c</columns>
    <columns>csr_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>csr_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>csr_Status__c</field>
        <operation>equals</operation>
        <value>Rework</value>
    </filters>
    <label>CSR Rework</label>
    <sharedTo>
        <group>CSR_Processor</group>
    </sharedTo>
</ListView>