force-app/main/default/objects/CSR__c/listViews/CSR_Work_Backlog.listView-meta.xml
<ListView>
    <fullName>CSR_Work_Backlog</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>csr_Formula__c</columns>
    <columns>csr_Phase__c</columns>
    <columns>csr_DealerDivision__c</columns>
    <columns>csr_DealerGroup__c</columns>
    <columns>csr_DealerCode__c</columns>
    <columns>csr_Dealer_Type__c</columns>
    <columns>csr_Type__c</columns>
    <columns>csr_Internal_Checkbox__c</columns>
    <columns>csr_Competitive_Type__c</columns>
    <columns>csr_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>csr_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>csr_Status__c</field>
        <operation>equals</operation>
        <value>N</value>
    </filters>
    <filters>
        <field>csr_Status__c</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <filters>
        <field>csr_Status__c</field>
        <operation>equals</operation>
        <value>W</value>
    </filters>
    <label>CSR Work Backlog</label>
</ListView>